[package]
name = "heaptrack-demangle-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.12", features = ["derive"] }
rustc-demangle = "0.1.21"
zstd = "0.12.3"

[profile.release]
lto = true

[[bin]]
name = "rdemangle-heaptrack"
path = "./src/main.rs"
